--- a/index.html
+++ b/index.html
@@ -67,39 +67,38 @@
     <div class="content">
         <h1>فصول الكتاب</h1>
         <div class="chapter">
-            <a href="file:///C:/Users/USER/OneDrive/Desktop/المقدمه.html"><strong>المقدمة</strong></a>
-        </div>
-        <div class="chapter">
-            <a href="file:///C:/Users/USER/OneDrive/Desktop/الفصل الاول.html"><strong>الفصل الاول : حين بدأ كل شيْ ينهار</strong></a>
-        </div>
-        <div class="chapter">
-            <a href="file:///C:/Users/USER/OneDrive/Desktop/الفصل الثاني.html"><strong>الفصل الثاني: وحشة الليل والصمت القاتل</strong></a>
-        </div>
-        <div class="chapter">
-            <a href="file:///C:/Users/USER/OneDrive/Desktop/الفصل الثالث.html"><strong>الفصل الثالث: أطلال الحب المفقود </strong></a>
-        </div>
-        <div class="chapter">
-            <a href="file:///C:/Users/USER/OneDrive/Desktop/الفصل الرابع.html"><strong>الفصل الرابع: عاصفة الاضطرابات النفسية</strong></a>
-        </div>
-        <div class="chapter">
-            <a href="file:///C:/Users/USER/OneDrive/Desktop/الفصل الخامس.html"><strong>الفصل الخامس: حين يبتلع الظلام كل شيء</strong></a>
-        </div>
-        <div class="chapter">
-            <a href="file:///C:/Users/USER/OneDrive/Desktop/الفصل السادس.html"><strong>الفصل السادس: الطريق الى الخلاص</strong></a>
-        </div>
-        <div class="chapter">
-            <a href="file:///C:/Users/USER/OneDrive/Desktop/الفصل السابع.html"><strong>الفصل السابع: الفقد المتكرر..جرح لا يندمل</strong></a>
-        </div>
-        <div class="chapter">
-            <a href="file:///C:/Users/USER/OneDrive/Desktop/الفصل الثامن.html"><strong>الفصل الثامن: السقوط الاخير..لا طريق للعودة؟</strong></a>
-        </div>
-        <div class="chapter">
-            <a href="file:///C:/Users/USER/OneDrive/Desktop/الفصل التاسع.html"><strong>الفصل التاسع: العزلة الأبدية أم استسلام الروح؟</strong></a>
-        </div>
-        <div class="chapter">
-            <a href="file:///C:/Users/USER/OneDrive/Desktop/الفصل العاشر.html"><strong>الفصل العاشر: حين يشرق الوعي من جديد</strong></a>
-        </div>
-    </div>
+       	   <a href="المقدمه.html"><strong>المقدمة</strong></a>
+	</div>
+	<div class="chapter">
+  	  <a href="الفصل الاول.html"><strong>الفصل الاول : حين بدأ كل شيْ ينهار</strong></a>
+	</div>
+	<div class="chapter">
+ 	   <a href="الفصل الثاني.html"><strong>الفصل الثاني: وحشة الليل والصمت القاتل</strong></a>
+	</div>
+	<div class="chapter">
+ 	   <a href="الفصل الثالث.html"><strong>الفصل الثالث: أطلال الحب المفقود </strong></a>
+	</div>
+	<div class="chapter">
+ 	   <a href="الفصل الرابع.html"><strong>الفصل الرابع: عاصفة الاضطرابات النفسية</strong></a>
+	</div>
+	<div class="chapter">
+   	 <a href="الفصل الخامس.html"><strong>الفصل الخامس: حين يبتلع الظلام كل شيء</strong></a>
+	</div>
+	<div class="chapter">
+	    <a href="الفصل السادس.html"><strong>الفصل السادس: الطريق الى الخلاص</strong></a>
+	</div>
+	<div class="chapter">
+ 	   <a href="الفصل السابع.html"><strong>الفصل السابع: الفقد المتكرر..جرح لا يندمل</strong></a>
+	</div>
+<div class="chapter">
+    <a href="الفصل الثامن.html"><strong>الفصل الثامن: السقوط الاخير..لا طريق للعودة؟</strong></a>
+</div>
+<div class="chapter">
+    <a href="الفصل التاسع.html"><strong>الفصل التاسع: العزلة الأبدية أم استسلام الروح؟</strong></a>
+</div>
+<div class="chapter">
+    <a href="الفصل العاشر.html"><strong>الفصل العاشر: حين يشرق الوعي من جديد</strong></a>
+</div>
 
     <script>
         let scrollSpeed = 100; 
