--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             height: auto; 
             overflow: auto; 
             user-select: none;  
-            background-image: url("photo_٢٠٢٥-٠٢-٢٦_١٥-٥٩-٣٨.jpg"); 
+            background-image: url("https://nezar2004.github.io/My_book/photo_%D9%A2%D9%A0%D9%A2%D9%A5-%D9%A0%D9%A2-%D9%A2%D9%A6_%D9%A1%D9%A5-%D9%A5%D9%A9-%D9%A3%D9%A8.jpg"); 
             background-size: cover; 
             background-position: center;
             background-attachment: fixed; 
@@ -60,45 +60,46 @@
 
     <!-- إضافة الصوت -->
     <audio autoplay loop controls>
-		<source src="audio_2025-04-04_20-36-49.mp3" type="audio/mp3">
-		Your browser does not support the audio element.
+        <source src="https://nezar2004.github.io/My_book/audio_2025-04-04_20-36-49.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
     </audio>
 
     <div class="content">
         <h1>فصول الكتاب</h1>
         <div class="chapter">
-       	   <a href="المقدمه.html"><strong>المقدمة</strong></a>
-	</div>
-	<div class="chapter">
-  	  <a href="الفصل الاول.html"><strong>الفصل الاول : حين بدأ كل شيْ ينهار</strong></a>
-	</div>
-	<div class="chapter">
- 	   <a href="الفصل الثاني.html"><strong>الفصل الثاني: وحشة الليل والصمت القاتل</strong></a>
-	</div>
-	<div class="chapter">
- 	   <a href="الفصل الثالث.html"><strong>الفصل الثالث: أطلال الحب المفقود </strong></a>
-	</div>
-	<div class="chapter">
- 	   <a href="الفصل الرابع.html"><strong>الفصل الرابع: عاصفة الاضطرابات النفسية</strong></a>
-	</div>
-	<div class="chapter">
-   	 <a href="الفصل الخامس.html"><strong>الفصل الخامس: حين يبتلع الظلام كل شيء</strong></a>
-	</div>
-	<div class="chapter">
-	    <a href="الفصل السادس.html"><strong>الفصل السادس: الطريق الى الخلاص</strong></a>
-	</div>
-	<div class="chapter">
- 	   <a href="الفصل السابع.html"><strong>الفصل السابع: الفقد المتكرر..جرح لا يندمل</strong></a>
-	</div>
-<div class="chapter">
-    <a href="الفصل الثامن.html"><strong>الفصل الثامن: السقوط الاخير..لا طريق للعودة؟</strong></a>
-</div>
-<div class="chapter">
-    <a href="الفصل التاسع.html"><strong>الفصل التاسع: العزلة الأبدية أم استسلام الروح؟</strong></a>
-</div>
-<div class="chapter">
-    <a href="الفصل العاشر.html"><strong>الفصل العاشر: حين يشرق الوعي من جديد</strong></a>
-</div>
+            <a href="https://nezar2004.github.io/My_book/المقدمه.html"><strong>المقدمة</strong></a>
+        </div>
+        <div class="chapter">
+            <a href="https://nezar2004.github.io/My_book/الفصل%20الاول.html"><strong>الفصل الاول : حين بدأ كل شيْ ينهار</strong></a>
+        </div>
+        <div class="chapter">
+            <a href="https://nezar2004.github.io/My_book/الفصل%20الثاني.html"><strong>الفصل الثاني: وحشة الليل والصمت القاتل</strong></a>
+        </div>
+        <div class="chapter">
+            <a href="https://nezar2004.github.io/My_book/الفصل%20الثالث.html"><strong>الفصل الثالث: أطلال الحب المفقود </strong></a>
+        </div>
+        <div class="chapter">
+            <a href="https://nezar2004.github.io/My_book/الفصل%20الرابع.html"><strong>الفصل الرابع: عاصفة الاضطرابات النفسية</strong></a>
+        </div>
+        <div class="chapter">
+            <a href="https://nezar2004.github.io/My_book/الفصل%20الخامس.html"><strong>الفصل الخامس: حين يبتلع الظلام كل شيء</strong></a>
+        </div>
+        <div class="chapter">
+            <a href="https://nezar2004.github.io/My_book/الفصل%20السادس.html"><strong>الفصل السادس: الطريق الى الخلاص</strong></a>
+        </div>
+        <div class="chapter">
+            <a href="https://nezar2004.github.io/My_book/الفصل%20السابع.html"><strong>الفصل السابع: الفقد المتكرر..جرح لا يندمل</strong></a>
+        </div>
+        <div class="chapter">
+            <a href="https://nezar2004.github.io/My_book/الفصل%20الثامن.html"><strong>الفصل الثامن: السقوط الاخير..لا طريق للعودة؟</strong></a>
+        </div>
+        <div class="chapter">
+            <a href="https://nezar2004.github.io/My_book/الفصل%20التاسع.html"><strong>الفصل التاسع: العزلة الأبدية أم استسلام الروح؟</strong></a>
+        </div>
+        <div class="chapter">
+            <a href="https://nezar2004.github.io/My_book/الفصل%20العاشر.html"><strong>الفصل العاشر: حين يشرق الوعي من جديد</strong></a>
+        </div>
+    </div>
 
     <script>
         let scrollSpeed = 100; 
