--- a/الفصل الثالث.html
+++ b/الفصل الثالث.html
@@ -159,7 +159,7 @@
 وفي النهاية، أدرك أنه لا يوجد مخرج من هذا الألم. "هذا هو مصيري." كانت تلك الفكرة تعزز من شعوره بالعجز. أصبح يعيش في دوامة من الذكريات المؤلمة، لا يعرف كيف يمكن أن ينتهي هذا الكابوس. وكل ما تبقى له هو الألم، كرفيق دائم في رحلته الحزينة، وكأن كل ما عاشه قد تحول إلى ذكرى مؤلمة لا تفارق خياله .
 
 </p>
-    <a href="file:///C:/Users/USER/OneDrive/Desktop/%D9%83%D8%AA%D8%A7%D8%A8%D9%8A.html">العودة إلى الصفحة الرئيسية</a>
+    <a href="https://nezar2004.github.io/My_book/">العودة إلى الصفحة الرئيسية</a>
 </div>
 
 </body>
