--- a/الفصل الثاني.html
+++ b/الفصل الثاني.html
@@ -170,7 +170,7 @@
 في تلك اللحظات، أدرك أنه ليس فقط محاصرًا في ظلامه ، بل أصبح جزءًا من تلك الوحشة . كانت الحياة تتسرب من بين أصابعه، ومع كل نبضة في قلبه ، كان يشعر بأن الألم هو الرفيق الدائم ، حيث لم يعد هناك مفر من الكآبة .
 
  <p>
-    <a href="file:///C:/Users/USER/OneDrive/Desktop/%D9%83%D8%AA%D8%A7%D8%A8%D9%8A.html">العودة إلى الصفحة الرئيسية</a>
+    <a href="https://nezar2004.github.io/My_book/">العودة إلى الصفحة الرئيسية</a>
 </div>
 
 </body>
