--- a/الفصل الخامس.html
+++ b/الفصل الخامس.html
@@ -125,7 +125,7 @@
 مع كل خطوة نحو الشفاء، يبدأ في إعادة بناء ذاته. "يجب أن أتعلم كيف أكون قويًا." تتجلى هذه الفكرة كدعوة للتغيير، حيث يبدأ في استكشاف ما يعنيه أن يكون قويًا. يتساءل عن القيم التي كان يحملها، وكيف يمكنه إعادة تعريف نفسه في ضوء تجاربه المؤلمة. "كيف يمكنني تحويل هذا الألم إلى قوة؟ "
 
  </p>
-    <a href="file:///C:/Users/USER/OneDrive/Desktop/%D9%83%D8%AA%D8%A7%D8%A8%D9%8A.html">العودة إلى الصفحة الرئيسية</a>
+    <a href="https://nezar2004.github.io/My_book/">العودة إلى الصفحة الرئيسية</a>
 </div>
 
 </body>
