--- a/الفصل السادس.html
+++ b/الفصل السادس.html
@@ -106,7 +106,7 @@
 
 
 </p>
-    <a href="file:///C:/Users/USER/OneDrive/Desktop/%D9%83%D8%AA%D8%A7%D8%A8%D9%8A.html">العودة إلى الصفحة الرئيسية</a>
+    <a href="https://nezar2004.github.io/My_book/">العودة إلى الصفحة الرئيسية</a>
 </div>
 
 </body>
