--- a/المقدمه.html
+++ b/المقدمه.html
@@ -49,6 +49,7 @@
 لكن وسط العتمة، يتراقص شعاع خافت من الأمل، يدعوه للسير رغم ثقل الخطى. هل سيتمكن من انتشال نفسه من قاع الظلام؟ أم أن وحدته ستصبح قدرًا محتومًا لا مفر منه؟  
 "ظل الوحدة" ليست مجرد رواية، بل مرآة تعكس أعمق زوايا النفس البشرية، حيث تتجلى هشاشتها وقوتها في آنٍ واحد. هي قصة عن السقوط والنهوض، عن الألم الذي يوقظ، وعن البحث الحثيث عن نور قد يكون أقرب مما نتصور، لكننا لا نراه وسط العواصف النفسية . 
 تتألف الرواية من "عشرة فصول"، تمثل كل مرحلة خطوة جديدة في رحلة البطل النفسية والوجدانية :  
+<pre>	    
 حين بدأ كل شيء ينهار الفصل الاول:
 وحشة الليل والصمت القاتل الفصل الثاني:
 أطلال الحب المفقود  الفصل الثالث:
@@ -59,6 +60,7 @@
 السقوط الأخير.. لا طريق للعودة؟ الفصل الثامن:
 العزلة الأبدية أم استسلام الروح؟ الفصل التاسع:
 حين يشرق الوعي من جديد  الفصل العاشر :
+</pre>    
 هذه الرواية ليست مجرد قصة، بل رحلة داخل دهاليز النفس، حيث تنبعث القوة من الهشاشة، ويتحول الألم إلى بداية جديدة. فهل سينجح البطل في كسر قيده والخروج من ظلال الوحدة؟
 
  </p>
