--- a/المقدمه.html
+++ b/المقدمه.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="رواية ظل الوحدة: رحلة نفسية عميقة داخل دهاليز الألم والأمل.">
     <title>المقدمة</title>
- <style>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
+
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Cairo', Arial, sans-serif;
             text-align: center;
             color: white; 
             margin: 0;
@@ -14,56 +17,101 @@
             background: url("photo_٢٠٢٥-٠٢-٢٦_١٥-٥٩-٣٨.jpg") no-repeat center fixed;
             background-size: cover;
         }
+
         .content {
             max-width: 800px;
             margin: 50px auto;
             background-color: rgba(0, 0, 0, 0.8);
             padding: 20px;
             border-radius: 10px;
-            line-height: 1.8;
+            line-height: 2;
         }
+
+        .content h1 {
+            font-size: 32px;
+            margin-bottom: 20px;
+        }
+
         .content p {
             font-weight: bold;
+            font-size: 18px;
+            margin-bottom: 25px;
         }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0 auto 30px;
+            text-align: center;  /* النص في وسط السطر */
+        }
+
+        ul li {
+            margin: 8px 0;
+            font-size: 17px;
+        }
+
         a {
             color: orange;
             font-size: 20px;
             text-decoration: none;
         }
+
         a:hover {
             color: red;
         }
-		@media (max-width: 600px) {
-			.content {
-				width: 90%;
-				padding: 15px;
-			}
-		}
+
+        @media (max-width: 600px) {
+            .content {
+                width: 90%;
+                padding: 15px;
+            }
+
+            .content h1 {
+                font-size: 26px;
+            }
+
+            .content p, ul li {
+                font-size: 16px;
+            }
+
+            a {
+                font-size: 18px;
+            }
+        }
     </style>
 </head>
 <body>
 
 <div class="content">
     <h1>المقدمة</h1>
-    <p>في عالمٍ تتلاطم فيه أمواج الوحدة والضياع، حيث يصبح الصمت ظلًا ثقيلًا، والخوف رفيقًا لا يفارق، تبدأ رحلة البطل في مواجهة أعماقه. بين أشباح الماضي وجراح الحاضر، بين أسئلة بلا إجابات وألم لا يهدأ، يخوض صراعًا يائسًا ضد العزلة التي تطوق روحه . 
-لكن وسط العتمة، يتراقص شعاع خافت من الأمل، يدعوه للسير رغم ثقل الخطى. هل سيتمكن من انتشال نفسه من قاع الظلام؟ أم أن وحدته ستصبح قدرًا محتومًا لا مفر منه؟  
-"ظل الوحدة" ليست مجرد رواية، بل مرآة تعكس أعمق زوايا النفس البشرية، حيث تتجلى هشاشتها وقوتها في آنٍ واحد. هي قصة عن السقوط والنهوض، عن الألم الذي يوقظ، وعن البحث الحثيث عن نور قد يكون أقرب مما نتصور، لكننا لا نراه وسط العواصف النفسية . 
-تتألف الرواية من "عشرة فصول"، تمثل كل مرحلة خطوة جديدة في رحلة البطل النفسية والوجدانية :  
-<pre>	    
-حين بدأ كل شيء ينهار الفصل الاول:
-وحشة الليل والصمت القاتل الفصل الثاني:
-أطلال الحب المفقود  الفصل الثالث:
-عاصفة الاضطرابات النفسية الفصل الرابع:
-حين يبتلع الظلام كل شيء الفصل الخامس:
-الطريق إلى الخلاص  الفصل السادس:
-الفقد المتكرر.. جرح لا يندمل الفصل السابع:
-السقوط الأخير.. لا طريق للعودة؟ الفصل الثامن:
-العزلة الأبدية أم استسلام الروح؟ الفصل التاسع:
-حين يشرق الوعي من جديد  الفصل العاشر :
-</pre>    
-هذه الرواية ليست مجرد قصة، بل رحلة داخل دهاليز النفس، حيث تنبعث القوة من الهشاشة، ويتحول الألم إلى بداية جديدة. فهل سينجح البطل في كسر قيده والخروج من ظلال الوحدة؟
+    <p>
+        في عالمٍ تتلاطم فيه أمواج الوحدة والضياع، حيث يصبح الصمت ظلًا ثقيلًا، والخوف رفيقًا لا يفارق، تبدأ رحلة البطل في مواجهة أعماقه.
+        بين أشباح الماضي وجراح الحاضر، بين أسئلة بلا إجابات وألم لا يهدأ، يخوض صراعًا يائسًا ضد العزلة التي تطوق روحه.
+        لكن وسط العتمة، يتراقص شعاع خافت من الأمل، يدعوه للسير رغم ثقل الخطى.
+        هل سيتمكن من انتشال نفسه من قاع الظلام؟ أم أن وحدته ستصبح قدرًا محتومًا لا مفر منه؟
+        <br><br>
+        "ظل الوحدة" ليست مجرد رواية، بل مرآة تعكس أعمق زوايا النفس البشرية، حيث تتجلى هشاشتها وقوتها في آنٍ واحد.
+        هي قصة عن السقوط والنهوض، عن الألم الذي يوقظ، وعن البحث الحثيث عن نور قد يكون أقرب مما نتصور، لكننا لا نراه وسط العواصف النفسية.
+    </p>
 
- </p>
+    <ul>
+        <li>حين بدأ كل شيء ينهار – الفصل الأول</li>
+        <li>وحشة الليل والصمت القاتل – الفصل الثاني</li>
+        <li>أطلال الحب المفقود – الفصل الثالث</li>
+        <li>عاصفة الاضطرابات النفسية – الفصل الرابع</li>
+        <li>حين يبتلع الظلام كل شيء – الفصل الخامس</li>
+        <li>الطريق إلى الخلاص – الفصل السادس</li>
+        <li>الفقد المتكرر.. جرح لا يندمل – الفصل السابع</li>
+        <li>السقوط الأخير.. لا طريق للعودة؟ – الفصل الثامن</li>
+        <li>العزلة الأبدية أم استسلام الروح؟ – الفصل التاسع</li>
+        <li>حين يشرق الوعي من جديد – الفصل العاشر</li>
+    </ul>
+
+    <p>
+        هذه الرواية ليست مجرد قصة، بل رحلة داخل دهاليز النفس، حيث تنبعث القوة من الهشاشة، ويتحول الألم إلى بداية جديدة.
+        فهل سينجح البطل في كسر قيده والخروج من ظلال الوحدة؟
+    </p>
+
     <a href="https://nezar2004.github.io/My_book/">العودة إلى الصفحة الرئيسية</a>
 </div>
 
