--- a/index.html
+++ b/index.html
@@ -3,65 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> ظل الوحدة </title>
+    <title>ظل الوحدة</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            color: white; 
+            color: white;
             margin: 0;
             padding: 0;
-            height: auto; 
-            overflow: auto; 
-            user-select: none;  
-            background-image: url("https://nezar2004.github.io/My_book/photo_%D9%A2%D9%A0%D9%A2%D9%A5-%D9%A0%D9%A2-%D9%A2%D9%A6_%D9%A1%D9%A5-%D9%A5%D9%A9-%D9%A3%D9%A8.jpg"); 
-            background-size: cover; 
+            height: auto;
+            overflow: auto;
+            user-select: none;
+            background-image: url("https://nezar2004.github.io/My_book/photo_%D9%A2%D9%A0%D9%A2%D9%A5-%D9%A0%D9%A2-%D9%A2%D9%A6_%D9%A1%D9%A5-%D9%A5%D9%A9-%D9%A3%D9%A8.jpg");
+            background-size: cover;
             background-position: center;
-            background-attachment: fixed; 
+            background-attachment: fixed;
         }
+
         .content {
             position: relative;
             z-index: 1;
             padding: 20px;
             max-width: 800px;
-            margin: 50px auto; 
-            background-color: rgba(0, 0, 0, 0.7); 
+            margin: 50px auto;
+            background-color: rgba(0, 0, 0, 0.7);
             border-radius: 10px;
         }
+
         .chapter {
             margin: 15px 0;
             padding: 10px;
             border: 1px solid white;
             border-radius: 5px;
-            background-color: rgba(255, 255, 255, 0.2); 
+            background-color: rgba(255, 255, 255, 0.2);
         }
-        h1 { color: cyan; }
-        body {
-            background-color: black;
-            color: white;
-            text-align: center;
-            font-family: Arial, sans-serif;
+
+        h1 {
+            color: cyan;
         }
+
         button {
             padding: 10px 20px;
             margin: 10px;
             font-size: 18px;
             cursor: pointer;
         }
+
         #content {
             margin-top: 20px;
             padding: 20px;
             border: 2px solid white;
             min-height: 200px;
         }
+
+        /* لون الروابط */
+        .chapter a {
+            color: #00ffff;
+            text-decoration: none;
+            font-size: 18px;
+        }
+
+        .chapter a:hover {
+            color: #ffcc00;
+            text-decoration: underline;
+        }
+
     </style>
 </head>
 <body>
 
-    <!-- إضافة الصوت -->
+    <!-- الصوت -->
     <audio autoplay loop controls>
         <source src="https://nezar2004.github.io/My_book/audio_2025-04-04_20-36-49.mp3" type="audio/mp3">
-        Your browser does not support the audio element.
+        متصفحك لا يدعم تشغيل الصوت.
     </audio>
 
     <div class="content">
@@ -70,13 +84,13 @@
             <a href="https://nezar2004.github.io/My_book/المقدمه.html"><strong>المقدمة</strong></a>
         </div>
         <div class="chapter">
-            <a href="https://nezar2004.github.io/My_book/الفصل%20الاول.html"><strong>الفصل الاول : حين بدأ كل شيْ ينهار</strong></a>
+            <a href="https://nezar2004.github.io/My_book/الفصل%20الاول.html"><strong>الفصل الأول: حين بدأ كل شيء ينهار</strong></a>
         </div>
         <div class="chapter">
             <a href="https://nezar2004.github.io/My_book/الفصل%20الثاني.html"><strong>الفصل الثاني: وحشة الليل والصمت القاتل</strong></a>
         </div>
         <div class="chapter">
-            <a href="https://nezar2004.github.io/My_book/الفصل%20الثالث.html"><strong>الفصل الثالث: أطلال الحب المفقود </strong></a>
+            <a href="https://nezar2004.github.io/My_book/الفصل%20الثالث.html"><strong>الفصل الثالث: أطلال الحب المفقود</strong></a>
         </div>
         <div class="chapter">
             <a href="https://nezar2004.github.io/My_book/الفصل%20الرابع.html"><strong>الفصل الرابع: عاصفة الاضطرابات النفسية</strong></a>
@@ -85,13 +99,13 @@
             <a href="https://nezar2004.github.io/My_book/الفصل%20الخامس.html"><strong>الفصل الخامس: حين يبتلع الظلام كل شيء</strong></a>
         </div>
         <div class="chapter">
-            <a href="https://nezar2004.github.io/My_book/الفصل%20السادس.html"><strong>الفصل السادس: الطريق الى الخلاص</strong></a>
+            <a href="https://nezar2004.github.io/My_book/الفصل%20السادس.html"><strong>الفصل السادس: الطريق إلى الخلاص</strong></a>
         </div>
         <div class="chapter">
-            <a href="https://nezar2004.github.io/My_book/الفصل%20السابع.html"><strong>الفصل السابع: الفقد المتكرر..جرح لا يندمل</strong></a>
+            <a href="https://nezar2004.github.io/My_book/الفصل%20السابع.html"><strong>الفصل السابع: الفقد المتكرر.. جرح لا يندمل</strong></a>
         </div>
         <div class="chapter">
-            <a href="https://nezar2004.github.io/My_book/الفصل%20الثامن.html"><strong>الفصل الثامن: السقوط الاخير..لا طريق للعودة؟</strong></a>
+            <a href="https://nezar2004.github.io/My_book/الفصل%20الثامن.html"><strong>الفصل الثامن: السقوط الأخير.. لا طريق للعودة؟</strong></a>
         </div>
         <div class="chapter">
             <a href="https://nezar2004.github.io/My_book/الفصل%20التاسع.html"><strong>الفصل التاسع: العزلة الأبدية أم استسلام الروح؟</strong></a>
@@ -102,7 +116,7 @@
     </div>
 
     <script>
-        let scrollSpeed = 100; 
+        let scrollSpeed = 100;
 
         window.addEventListener("wheel", (e) => {
             if (e.deltaY > 0) {
@@ -110,8 +124,9 @@
             } else {
                 window.scrollBy(0, -scrollSpeed);
             }
-            e.preventDefault(); 
+            e.preventDefault();
         });
     </script>
+
 </body>
 </html>
