--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
             min-height: 200px;
         }
 
-        /* لون الروابط */
         .chapter a {
             color: #00ffff;
             text-decoration: none;
@@ -67,12 +66,38 @@
             color: #ffcc00;
             text-decoration: underline;
         }
+        ul {
+          list-style-type: none;
+          margin: 0;
+          padding: 0;
+          overflow: hidden;
+          background-color: #333333;
+        }
 
+        li {
+          float: left;
+        }
+
+        li a {
+          display: block;
+          color: white;
+          text-align: center;
+          padding: 16px;
+          text-decoration: none;
+        }
+
+        li a:hover {
+          background-color: #111111;
+        }
     </style>
 </head>
 <body>
-
-    <div class="content">
+         <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#news">News</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li><a href="#about">About</a></li>
+        </ul>
         <h1>فصول الكتاب</h1>
         <div class="chapter">
             <a href="https://nezar2004.github.io/My_book/المقدمه.html"><strong>المقدمة</strong></a>
