--- a/index.html
+++ b/index.html
@@ -20,6 +20,52 @@
             background-attachment: fixed;
         }
 
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #333333;
+        }
+
+        li {
+            float: left;
+        }
+
+        li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 16px;
+            text-decoration: none;
+        }
+
+        li a:hover {
+            background-color: #111111;
+        }
+
+        li img {
+            width: 24px;
+            height: 24px;
+        }
+
+        @media (max-width: 600px) {
+            li {
+                float: none;
+            }
+
+            li a {
+                text-align: center;
+                padding: 12px;
+                font-size: 16px;
+            }
+        }
+
+        h1 {
+            color: cyan;
+            margin-top: 30px;
+        }
+
         .content {
             position: relative;
             z-index: 1;
@@ -38,24 +84,6 @@
             background-color: rgba(255, 255, 255, 0.2);
         }
 
-        h1 {
-            color: cyan;
-        }
-
-        button {
-            padding: 10px 20px;
-            margin: 10px;
-            font-size: 18px;
-            cursor: pointer;
-        }
-
-        #content {
-            margin-top: 20px;
-            padding: 20px;
-            border: 2px solid white;
-            min-height: 200px;
-        }
-
         .chapter a {
             color: #00ffff;
             text-decoration: none;
@@ -66,39 +94,17 @@
             color: #ffcc00;
             text-decoration: underline;
         }
-        ul {
-          list-style-type: none;
-          margin: 0;
-          padding: 0;
-          overflow: hidden;
-          background-color: #333333;
-        }
-
-        li {
-          float: left;
-        }
-
-        li a {
-          display: block;
-          color: white;
-          text-align: center;
-          padding: 16px;
-          text-decoration: none;
-        }
-
-        li a:hover {
-          background-color: #111111;
-        }
     </style>
 </head>
 <body>
-         <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#news">News</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <li><a href="#about">About</a></li>
-        </ul>
-        <h1>فصول الكتاب</h1>
+
+    <ul>
+        <li><a href="https://www.instagram.com/n____1____b/"><img src="https://cdn-icons-png.flaticon.com/24/2111/2111463.png" alt="Instagram"></a></li>
+        <li><a href="https://www.instagram.com/n____1____b/"><img src="https://cdn-icons-png.flaticon.com/24/733/733547.png" alt="Facebook"></a></li>
+    </ul>
+
+    <h1>فصول الكتاب</h1>
+    <div class="content">
         <div class="chapter">
             <a href="https://nezar2004.github.io/My_book/المقدمه.html"><strong>المقدمة</strong></a>
         </div>
@@ -144,7 +150,7 @@
                 window.scrollBy(0, -scrollSpeed);
             }
             e.preventDefault();
-        });
+        }, { passive: false });
     </script>
 
 </body>
