--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
 
    
-    <div class="feedback-text">رأيكم يهمني ❤️</div>
+    <div class="feedback-text">❤️ رأيكم يهمني ❤️</div>
 
     
     <div class="social-icons">
