--- a/index.html
+++ b/index.html
@@ -47,17 +47,6 @@
       font-weight: bold;
     }
 
-    @media (max-width: 600px) {
-      .navbar {
-        flex-direction: column;
-        gap: 10px;
-      }
-
-      .feedback-text {
-        order: -1;
-      }
-    }
-
     h1 {
       color: cyan;
       margin-top: 30px;
@@ -96,17 +85,46 @@
       text-decoration: underline;
     }
 
+    .feedback-form {
+      margin-top: 30px;
+      padding: 20px;
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 10px;
+    }
+
+    input, textarea, button {
+      width: 90%;
+      margin: 10px 0;
+      padding: 10px;
+      border-radius: 5px;
+      border: none;
+      font-size: 16px;
+    }
+
+    button {
+      background-color: #00ffff;
+      color: black;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
     @keyframes fadeIn {
       to { opacity: 1; }
     }
 
   </style>
+
+  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+  <script>
+    (function(){
+      emailjs.init("jxKV45bZn-PmfU9JO");
+    })();
+  </script>
+
 </head>
 <body>
 
-  
   <div class="navbar">
- 
     <div class="social-icons">
       <a href="https://www.instagram.com/n____1____b/">
         <img src="https://cdn-icons-png.flaticon.com/24/2111/2111463.png" alt="Instagram">
@@ -116,10 +134,8 @@
       </a>
     </div>
 
-   
     <div class="feedback-text">❤️ رأيكم يهمني ❤️</div>
 
-    
     <div class="social-icons">
       <a href="https://www.instagram.com/n____1____b/">
         <img src="https://cdn-icons-png.flaticon.com/24/2111/2111463.png" alt="Instagram">
@@ -144,18 +160,30 @@
     <div class="chapter"><a href="https://nezar2004.github.io/My_book/الفصل%20الثامن.html"><strong>الفصل الثامن: السقوط الأخير.. لا طريق للعودة؟</strong></a></div>
     <div class="chapter"><a href="https://nezar2004.github.io/My_book/الفصل%20التاسع.html"><strong>الفصل التاسع: العزلة الأبدية أم استسلام الروح؟</strong></a></div>
     <div class="chapter"><a href="https://nezar2004.github.io/My_book/الفصل%20العاشر.html"><strong>الفصل العاشر: حين يشرق الوعي من جديد</strong></a></div>
+  
+   
+    <div class="feedback-form">
+      <h2>📩 أرسل تعليقك</h2>
+      <form id="contact-form">
+        <input type="text" name="name" placeholder="اسمك" required>
+        <textarea name="message" placeholder="اكتب تعليقك" required></textarea>
+        <button type="submit">إرسال</button>
+      </form>
+    </div>
+
   </div>
 
   <script>
-    let scrollSpeed = 100;
-    window.addEventListener("wheel", (e) => {
-      if (e.deltaY > 0) {
-        window.scrollBy(0, scrollSpeed);
-      } else {
-        window.scrollBy(0, -scrollSpeed);
-      }
+    document.getElementById("contact-form").addEventListener("submit", function(e) {
       e.preventDefault();
-    }, { passive: false });
+      emailjs.sendForm("service_wx0hb2v", "template_0umaq5m", this)
+        .then(() => {
+          alert("✅ تم إرسال تعليقك بنجاح!");
+        }, (error) => {
+          alert("❌ حدث خطأ أثناء الإرسال: " + JSON.stringify(error));
+        });
+      this.reset();
+    });
   </script>
 
 </body>
