--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
     <div class="feedback-form">
       <h2>📩 أرسل تعليقك</h2>
       <form id="contact-form">
-        <input type="text" name="name" placeholder="اسمك" required>
-        <textarea name="message" placeholder="اكتب تعليقك" required></textarea>
+        <input type="text" name="name" placeholder="name / اسمك" required>
+        <textarea name="message" placeholder="Write your comment / اكتب تعليقك" required></textarea>
         <button type="submit">إرسال</button>
       </form>
     </div>
