--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   
    
     <div class="feedback-form">
-      <h2>📩 أرسل تعليقك</h2>
+      <h2>📩 Send your comment / 📩 أرسل تعليقك</h2>
       <form id="contact-form">
         <input type="text" name="name" placeholder="name / اسمك" required>
         <textarea name="message" placeholder="Write your comment / اكتب تعليقك" required></textarea>
