--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>★彡 ظل الوِحدَة 彡★</title>
+  <link rel="icon" type="image/png" href="book.png"
   <style>
     body {
       font-family: Arial, sans-serif;
