--- a/index.html
+++ b/index.html
@@ -127,25 +127,32 @@
 
   <div class="navbar">
     <div class="social-icons">
-      <a href="https://www.instagram.com/n____1____b/">
+      <a href="https://www.instagram.com/n____1____b/" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/24/2111/2111463.png" alt="Instagram">
       </a>
-      <a href="https://www.facebook.com/N.1.B.N.1.B">
+      <a href="https://www.facebook.com/N.1.B.N.1.B" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/24/733/733547.png" alt="Facebook">
+      </a>
+      <a href="https://www.snapchat.com/add/your_snap_username" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/24/733/733614.png" alt="Snapchat">
       </a>
     </div>
 
     <div class="feedback-text">❤️ رأيكم يهمني ❤️</div>
 
     <div class="social-icons">
-      <a href="https://www.instagram.com/n____1____b/">
+      <a href="https://www.instagram.com/n____1____b/" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/24/2111/2111463.png" alt="Instagram">
       </a>
-      <a href="https://www.facebook.com/N.1.B.N.1.B">
+      <a href="https://www.facebook.com/N.1.B.N.1.B" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/24/733/733547.png" alt="Facebook">
+      </a>
+      <a href="https://www.snapchat.com/add/your_snap_username" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/24/733/733614.png" alt="Snapchat">
       </a>
     </div>
   </div>
+
 
   <h1>فصول الكتاب</h1>
 
