--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
       <a href="https://www.facebook.com/N.1.B.N.1.B" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/24/733/733547.png" alt="Facebook">
       </a>
-      <a href="https://www.snapchat.com/add/your_snap_username" target="_blank">
+     <!-- <a href="https://www.snapchat.com/add/your_snap_username" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/24/733/733614.png" alt="Snapchat">
-      </a>
+      </a>-->
     </div>
 
     <div class="feedback-text">❤️ رأيكم يهمني ❤️</div>
@@ -146,10 +146,10 @@
       </a>
       <a href="https://www.facebook.com/N.1.B.N.1.B" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/24/733/733547.png" alt="Facebook">
-      </a>
+    <!--  </a>
       <a href="https://www.snapchat.com/add/your_snap_username" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/24/733/733614.png" alt="Snapchat">
-      </a>
+      </a>-->
     </div>
   </div>
 
