--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
       <a href="https://www.facebook.com/N.1.B.N.1.B" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/24/733/733547.png" alt="Facebook">
       </a>
+      <a href="https://www.snapchat.com/add/nezarahmad55?share_id=5E-plotCgfI&locale=ar-EG" target="_blank">
+        <img src="https://img.utdstc.com/icon/f34/805/f34805cdd3d43b7ab36b39621fc47de11263f0f53c3460f9186ba293f2696cef:200" alt="Snapchat">
+      </a>
     </div>
 
     <div class="feedback-text">❤️ رأيكم يهمني ❤️</div>
@@ -143,6 +146,10 @@
       <a href="https://www.facebook.com/N.1.B.N.1.B" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/24/733/733547.png" alt="Facebook">
       </a>
+      <a href="https://www.snapchat.com/add/nezarahmad55?share_id=5E-plotCgfI&locale=ar-EG" target="_blank" rel="noopener noreferrer">
+		<img src="https://img.utdstc.com/icon/f34/805/f34805cdd3d43b7ab36b39621fc47de11263f0f53c3460f9186ba293f2696cef:200" alt="Snapchat">
+	</a>
+
     </div>
   </div>
 
