--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>★彡 ظل الوِحدَة 彡★</title>
-
+  <link rel="icon" href="https://i.pinimg.com/736x/06/c5/be/06c5be7368c29ffd12131d9ae5c47c0a.jpg" type="image/jpg">
   <style>
     body {
       font-family: Arial, sans-serif;
